fixed back button and title on mobile

--- a/src/components/BackButton/backButton.module.sass
+++ b/src/components/BackButton/backButton.module.sass
@@ -1,5 +1,10 @@
+@import "../../pages/main.sass"
+  
 .backButton
     grid-area: title-start
+    @media screen and (max-width: $m)
+      grid-area: top !important
+      padding-top: 140px
     z-index: 2
     width: 100px
     height: 30px
